--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   database: ubuntu
   pool: 5
@@ -23,3 +23,6 @@ production:
   database: localhost
   pool: 5
   timeout: 5000
+
+cucumber:
+  <<: *test
