--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
 # Do not set this db to the same as development or production.
 test: &test
   adapter: postgresql
-  database: ubuntu
+  database: ubuntu-test
   pool: 5
   timeout: 5000
 
